2013-11-23  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* configure.ac, atari.c, platform.h, atari_ps2.c, sdl/main.c : Minimal cleanup
  of platform-specific Sleep/Time routines.


2013-11-11  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* monitor.c: Fixed & updated symbols based on OS & BASIC source listings.


2013-11-09  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* DOC/cart.txt: By request of the developers of The!Cart, reserved two IDs
  for this new cartridge type.


2013-05-02  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* DOC/INSTALL: Update NestedVM build manual - it doesn't build with
  --enable-ide.
* javanvm/atari_javanvm.c: Fix overflow of dsp_buffer - could happen on some
  systems where JAVANVM_SoundAvailable sometimes returns value larger than
  2*line_buffer_size.
* DOC/INSTALL, configure.ac, Makefile.in, javanvm/atari_javanvm.[ch],
  javanvm/input.[ch], javanvm/javanvm.h, javanvm/main.c, javanvm/sound.c,
  javanvm/video.[ch]: Code cleanup - split atari_javanvm.c to separate modules
  for video, sound and input. Merge javanvm and javanvm-basic targets into the
  default target - NestedVM host is now autodetected.


2013-04-28  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* Makefile.in: Use printf instead of echo -e - more portable (and -e didn't
  work on GNU Make 3.81).


2013-04-23  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* artifact.[ch], atari.c, atari800.man, cfg.c, configure.ac,
  pal_blending.[ch], ui.c, videomode.[ch], sdl/video_gl.c, sdl/video.sw.c,
  sdl/video.c, DOC/USAGE, amiga/makefile, dc/Makefile.dc,
  win32/msc/Makefile: New module, artifact.c, which manages settings of all
  artifacting modes. Artifacting modes are now stored independently for PAL
  and NTSC modes, and set according to the current TV mode setting.

* sdl/main.c, sdl/video.c: When in monitor, avoid reopening the SDL window
  during stepping through code.


2013-04-15  Tomasz Krasuski  <kr0tki@poczta.onet.pl>