@@ -240,7 +240,8 @@ static jint JNICALL NativeRunAtariProgram(JNIEnv *env, jobject this,
 		CARTRIDGE_STD_2_DESC,
 		CARTRIDGE_STD_4_DESC,
 		CARTRIDGE_RIGHT_4_DESC,
-		CARTRIDGE_BLIZZARD_32_DESC
+		CARTRIDGE_BLIZZARD_32_DESC,
+		CARTRIDGE_MEGAMAX_2048_DESC
 	};
 
 	const jbyte *img_utf = NULL;
